[gd_scene load_steps=4 format=3 uid="uid://dp7jp0dvjc63b"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_40p7g"]
[ext_resource type="FontFile" uid="uid://hrhl2ql6qoh4" path="res://Sounds/kenvector_future_thin.ttf" id="1_ccijf"]
[ext_resource type="FontFile" uid="uid://cp6h71yc5w0ex" path="res://Sounds/kenvector_future.ttf" id="3_6v8mv"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40p7g")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ccijf")
theme_override_font_sizes/font_size = 30
text = "MUSIC"
horizontal_alignment = 1

[node name="MusicVol" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="Effects" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ccijf")
theme_override_font_sizes/font_size = 30
text = "EFFECTS"
horizontal_alignment = 1

[node name="SfxVol" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6v8mv")
theme_override_font_sizes/font_size = 50
text = "BACK"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicVol" to="." method="_on_music_vol_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SfxVol" to="." method="_on_sfx_vol_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
